added mailer for new members

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,5 +1,8 @@
 <% content_for :sidebar do %>
   <%= render "sidebars/members" %>
+
+<%= button_to "Send Welcome Email", send_welcome_email_path(:id => @member) %></div>
+
 <% end %>
 
 <div class="form_row">
