--- a/app/views/membership_added_notifier/created.html.erb
+++ b/app/views/membership_added_notifier/created.html.erb
@@ -1,10 +1,10 @@
 <p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Hi <%= @member.first_name %>,</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Welcome aboard. Your information has been added you to the  Devil Dog Squadron website members list.
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Welcome aboard. Your information has been added you to the  Devil Dog Squadron website members list.</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">You should be able to use the lost password function, outlined in the members Login document (attached), to set your password.
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">You should be able to use the lost password function, outlined in the members Login document (attached), to set your password.</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">The quick version is:
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">The quick version is:</p>
 
 <ol style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">
 <li>go to <a href="https://www.devildogsquadron.com/login">https://www.devildogsquadron.com/login</a></li>
@@ -13,11 +13,11 @@
 <li>you should receive an email with a link back to the website and a form to set your password.</li>
 </ol>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">After you login, you can complete your contact and emergency contact info.
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">After you login, you can complete your contact and emergency contact info.</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">If you have any website difficulties, please do not hesitate to contact me.
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">If you have any website difficulties, please do not hesitate to contact me.</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Best regards,
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Best regards,</p>
 
 <p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Jim Ivanoff<br />
 Website Admin<br />
