removed airshow requirement on event sign up form

--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="cell">
     <div class="field">
       <%= f.label :event_id, "Event" %><br />
-      <%= f.collection_select :event_id, Event.air_show.ordered.published.all, :id, :title, options = {:order => 'start ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+      <%= f.collection_select :event_id, Event.ordered.published.all, :id, :title, options = {:order => 'start ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
     </div>
   </div>
   <div class="cell">
