format updates to what's New and calendar list

--- a/app/views/teasers/_form.html.erb
+++ b/app/views/teasers/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content, :class => 'boxsizingBorder' %>
   </div>
   <div class="actions">
     <%= f.submit :data => { :disable_with => "Submitting..." } %>
