--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -36,17 +36,14 @@
   </div>
 </div>
 <div class="indent_row">
-  <div class="cell">
-    <div class="field">
+  <div class="cell field">
       <%= f.label :start %><br />
       <%= f.text_field :start, :value => f.object.try(:start).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
-    </div>
   </div>
-  <div class="cell">
-    <div class="field">
+  <div class="cell field" style="max-width: 50%;">
       <%= f.label :end %><br />
       <%= f.text_field :end, :value => f.object.try(:end).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
-    </div>
+      <div class="form_note">Defaults to Sunday at 6PM after event start - adjust as necessary.</div>
   </div>
   <p class="form_note">Times aren't displayed so not really important to be accurate.</p>
 </div>
