added publish date to posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,6 +19,10 @@
   </div>
 <div class="clearer"></div>
   <div class="field">
+    <%= f.label :publish_date %><br />
+    <%= f.text_field :publish_date, :size => '50' %>
+  </div>
+  <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title, :size => '50' %>
   </div>
