--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -764,8 +764,11 @@ box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
   }
 
 .event_graphic {
-  float: right;
-  width: 45%;
+margin: 0 0 1em 0;
+  }
+
+.event_graphic img {
+width: 100%;
   }
 
 .calendar-ii {
