--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,8 +29,10 @@
   <% end %>
 <div class="calendar_row">
 <div class='row'>
+<div class="col-xs-12 col-sm-4">
+<div class='row'>
   <% if event.start.strftime("%b %d" ) == event.end.strftime("%b %d") %>
-<div class="col-xs-12  col-sm-2"">
+<div class="col-xs-12">
   <div class="calendar-ii large">
     <div class="calendar_year-ii large">
       <%= event.start.strftime("%Y") %>
@@ -46,7 +48,7 @@
     </div>
   </div>
   <% else %>
-  <div class="col-xs-6 col-sm-2">
+  <div class="col-xs-6 col-sm-6">
     <div class="calendar-ii large">
       <div class="calendar_year-ii large">
         <%= event.start.strftime("%Y") %>
@@ -62,7 +64,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-6 col-sm-2">
+  <div class="col-xs-6 col-sm-6">
     <div class="calendar-ii large">
       <div class="calendar_year-ii large">
         <%= event.end.strftime("%Y") %>
@@ -78,14 +80,16 @@
       </div>
     </div>
 <% end %>
-
-
-  </div>
-    <div class="location"><%= event.location.city + ", " + event.location.state %></div>
-
 </div>
+</div>
+
 <div class='row'>
-  <div class="col-xs-12">
+<div class="col-xs-12">
+<div class="location"><%= event.location.city + ", " + event.location.state %></div>
+</div>
+</div>
+</div>
+  <div class="col-xs-12 col-sm-8">
     <h2 class='event-title'><%= link_to event.title, event %></h2>
     <% if event.event_statuses_id == 2 %>
       <span class="event-flag" style="display: inline;"> &lt;= Tentative</span>
@@ -100,7 +104,7 @@
       <% end %>
 
 <% if event.rides_available? %>
-<p class='rides-teaser'><%= image_tag '/uploads/images/dd_illustration_sm.jpg' %><br /><%= link_to "Devil Dog Rides available at this event !", living_flight_history_experience_path %></p>
+<p class='rides-teaser'><%= image_tag '/uploads/images/dd_illustration_sm.jpg' %><br /><%= link_to "Devil Dog Rides available at this event !", living_history_flight_experience_path %></p>
 
 	<% if !event.lhfe_flights.empty? %>
 	  <p>Scheduled ride times:</p>
